[package]
name = "omni-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Sayan M <sayan9168>"]
description = "Universal Meta-Compiler and VM for Cross-Language Execution"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
notify = "6.1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
